--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
   ],
   "author": "Brandon",
   "license": "MIT",
-  "dependencies": {},
-  "devDependencies": {
-    "nodemon": "^3.0.0",
-    "jest": "^29.0.0"
-  }
+  "dependencies": {
+    "circomlib": "^2.0.5"
+  },
+  "devDependencies": {}
 }
